@@ -19,6 +19,9 @@ bzr-builddeb (0.14) unstable; urgency=low
     that you don't grab a different upstream code for the same upstream
     version, that could break things horribly. You can also specify the
     revision to export with export-upstream-revision to combat this.
+  * Add support for pulling in the upstream branch when it is local so that
+    you can build the lastest version. The 'export-upstream-prepull' option
+    is only availble as a config file option.
 
  -- James Westby <jw+debian@jameswestby.net>  Sun, 14 Jan 2007 02:51:04 +0000
 
